Ensure bdd, creation schema if not exists
Se coprueba si existe la escquema y se crea si no existe.

--- a/backend/configs/config.yaml
+++ b/backend/configs/config.yaml
@@ -1,6 +1,8 @@
 database:
-  schema: "usersmanager"
-  
+  schema: "um_v3"
+  ensure: true
+  auto_migrate: true
+
 server:
   http:
     mode: "prod"
