--- a/backend/configs/config.yaml
+++ b/backend/configs/config.yaml
@@ -13,9 +13,14 @@ database:
           id: 1
           # Other field of user are in .env file
       provider:
-        id: 1
-        name: "Liftel"
-        desc: "Default provider"
+        liftel:
+          id: 1
+          name: "Liftel"
+          desc: "Default provider"
+        verificaciones:
+          id: 2
+          name: "Verificaciones"
+          desc: "Verificaciones provider"
 
 server:
   http:
